# claude-template

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  install.sh
.claude/: settings.json  settings.local.json
.claude/agents/: architect.md  deep-coder.md  evaluator.md  researcher.md  validator.md
.claude/context/: compact-snapshot.md  failure-log.jsonl  hook-stats.json
.claude/hooks/: check-file-header.js  check-line-limit.js  destructive-guard.js  failure-logger.js  guard.js  hook-telemetry.js  permission-denied-logger.js  pre-compact.js  session-start.js  stop-gate.js  stop-sync-reminder.js  timebox-test-gate.js
.claude/rules/: example-backend.md  example-frontend.md  gemini-selectors.md  mcp-boundaries.md  permission-layers.md  subagent-guide.md  team_protocol.md  thinking-model.md  workflow.md
docs/: 8_videos_summary.md  ai_harness_engineering_guide.md  mistakes.md  playwright_codex_testing_guide.md  prd-cross-debate.md  progress.md  todo.md
docs/guides/: agent-team.md  context-engineering.md  context-splitting.md  harness-architecture.md  mcp-integration.md  model-strategy.md
mcp-servers/cross-evaluator/: pyproject.toml
mcp-servers/cross-evaluator/src/: __init__.py  cache.py  models.py  prompt_builder.py  server.py  token_guard.py  tools.py
mcp-servers/cross-evaluator/src/backends/: __init__.py  gemini.py  openai_backend.py
mcp-servers/cross-evaluator/tests/: __init__.py  test_cache.py  test_server.py  test_token_guard.py
memory/: MEMORY.md
templates/: debate-log-template.md  prd-template.md  rubric-template.md
(+33 files in other folders)
